Rename Katas project to Project Euler

--- a/ProjectEuler.Tests/ProjectEuler.Tests.csproj
+++ b/ProjectEuler.Tests/ProjectEuler.Tests.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Katas\Katas.csproj" />
+    <ProjectReference Include="..\ProjectEuler\ProjectEuler.csproj" />
   </ItemGroup>
 
 </Project>
